Fix spacing on map page

--- a/src/App.css
+++ b/src/App.css
@@ -38,14 +38,23 @@ body {
   height: 750px;
   margin: 5%;
   flex-flow: row wrap;
+  align-content: flex-start;
 }
 
 .mapTitle {
   flex-basis: 100%;
   text-align: center;
+  padding: 5px;
+}
+
+.mapDivider {
+  width: 50%;
+  margin: 0 auto;
+  margin-bottom: 50px;
 }
 
 .bookstoreNames {
   padding-left: 50px;
+  padding-bottom: 100px;
   flex-basis: 100%;
 }
